REC-159 flickering issue in request UI fixed

--- a/src/main/resources/static/css/request.css
+++ b/src/main/resources/static/css/request.css
@@ -1,3 +1,7 @@
 table.tableWithoutBorder tbody tr td{
     border-top: 0;
 }
+
+#errorMessageId,#itemBarcodeErrorMessage,#patronBarcodeErrorMessage,#requestTypeErrorMessage,#deliveryLocationErrorMessage,#requestingInstitutionErrorMessage,#patronEmailIdErrorMessage{
+    display: none;
+}
